--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.7.1",
+    "style-resources-loader": "^1.5.0",
     "typescript": "~4.1.5"
   },
   "config": {
