--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "commit": "git cz"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.6.5",
+    "element-plus": "^2.2.22",
     "vue": "^3.0.0",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
