--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "less-loader": "^5.0.0",
     "prettier": "^2.7.1",
     "style-resources-loader": "^1.5.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "webpackbar": "^5.0.2"
   },
   "config": {
     "commitizen": {
